src/objects/JBCXM__C360Sections__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__AccountReference__c</fullName>
        <label>Account Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ActualObjectId__c</fullName>
        <label>Actual ObjectId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomConfig__c</fullName>
        <label>CustomConfig</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayLabel__c</fullName>
        <label>Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__FieldId__c</fullName>
        <label>Field Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GS Layout</label>
        <referenceTo>JBCXM__GSLayout__c</referenceTo>
        <relationshipLabel>C360 Sections</relationshipLabel>
        <relationshipName>C360Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__InAccountWidget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InAccountWidget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__InCustomer360__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InCustomer360</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__InMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InMobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__InOpportunityWidget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InOpportunityWidget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__InSCWidget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service cloud widget</description>
        <label>In Service Cloud Widget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__ObjectId__c</fullName>
        <description>It stores Salesforce sObject Id.</description>
        <label>Object Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__PageName__c</fullName>
        <label>PageName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ReportItems__c</fullName>
        <label>ReportItems</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__isStandardObject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Standard Object</label>
        <type>Checkbox</type>
    </fields>
    <label>C360 Sections</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>JBCXM__IsActive__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JBCXM__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C360 Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>